Handle multiple values for a single option -- rework
- remove non working type casting in JsonExecParamParser parsing method to enable use of String[]
- rework getValue and getExecParamValue methods of class ExecParam to return a string
- adapt tests and interface to said change